# deep-research

./: .env.eval.example  .env.example  .gitignore  AGENTS.md  DEEP_RESEARCH_ARCHITECTURE_OPTIMIZATION_PLAN.md  DOMAIN_SKILL_AUTHORING_GUIDE.md  README.md  README_zh.md  deep_research_agent_eval_task_doc.md  langgraph.json  main.py  mcp_config.example.json  pyproject.toml  skills-lock.json
evals/: README.md  conftest.py  eval_summary.json  test_full_turn.py  test_multi_turn.py  test_single_step.py
evals/datasets/: full_turn.yaml  multi_turn.yaml  single_step.yaml
evals/helpers/: assertions.py  datasets.py  fixtures.py  judges.py  runner.py  state.py  traces.py
evals/smoke/: test_pipeline_smoke.py
scripts/: export_eval_summary.py  run_evals.py
src/: agent.py  cli.py  config.py  llm.py  mcp.py  prompts.py  schemas.py  skills.py  tools.py
src/middleware/: __init__.py  search_usage_limit.py
src/subagents/: report_agent.py  research_agent.py  scoping_agent.py  verification_agent.py
tests/: test_async_tools.py  test_cli_async_flow.py  test_mcp_async_lifecycle.py  test_search_usage_limit_middleware.py
